Combining character improvements

--- a/demo/mlmodern_luademo.tex
+++ b/demo/mlmodern_luademo.tex
@@ -1,9 +1,9 @@
 \documentclass{article}
 \usepackage{iftex}
 \unless\iftutex
-  \usepackage[T5,T1]{fontenc}
+  \usepackage[L7x,Qx,T1,T5]{fontenc}
 \fi
-\usepackage[vietnamese, polish, ngerman]{babel}
+\usepackage[vietnamese, polish, ngerman, shorthands=off]{babel}
 \usepackage{mlmodern}
 \usepackage{blindtext}
 \usepackage{lipsum}
